--- a/css/scss/main.css
+++ b/css/scss/main.css
@@ -681,10 +681,20 @@ footer .link-animated a:hover {
 }
 
 /* Media Queries */
-/* Smartphones Only */
-@media (max-width: 640px) {
+/* Smartphone and Tablets Only */
+@media (max-width: 991.98px) {
   /* Navbar */
+  .sticky-top.navbar {
+    position: relative;
+    background: #FFFFFF;
+  }
+  .sticky-top.navbar .navbar-nav .nav-link {
+    padding: 10px 0;
+    color: #212529;
+  }
   .navbar {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
     /* Navbar Brand */
   }
   .navbar .navbar-brand img {
@@ -694,6 +704,10 @@ footer .link-animated a:hover {
   }
   .navbar .navbar-nav .nav-link {
     font-size: 14px;
+  }
+  .navbar .navbar-nav .nav-link, .navbar .navbar-nav .nav-link.show {
+    padding: 10px 0;
+    color: #212529;
   }
   /* Carousel */
   .carousel .carousel-inner .carousel-item img {
@@ -719,51 +733,6 @@ footer .link-animated a:hover {
   .carousel .carousel-control-next {
     display: none;
   }
-  .features .feature-item {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-  }
-  .features .center-image {
-    height: 330px; /* Set the same height as width */
-  }
-  .testimonial-carousel .testimonial-item {
-    max-width: 350px;
-    position: absolute; /* Position the item absolutely within its parent */
-    left: 0%; /* Adjust the right positioning */
-    margin: 0 auto;
-  }
-}
-/* Tablets/Ipads Only */
-@media (max-width: 768px) {
-  .responsive-content {
-    justify-content: flex-start !important;
-  }
-}
-@media (min-width: 768px) {
-  /* Footer */
-  .footer-about {
-    margin-bottom: -75px;
-  }
-}
-/* Smart phoen and Tablets Only */
-@media (max-width: 991.98px) {
-  /* Navbar */
-  .sticky-top.navbar {
-    position: relative;
-    background: #FFFFFF;
-  }
-  .sticky-top.navbar .navbar-nav .nav-link {
-    padding: 10px 0;
-    color: #212529;
-  }
-  .navbar {
-    padding-top: 10px !important;
-    padding-bottom: 10px !important;
-  }
-  .navbar .navbar-nav .nav-link, .navbar .navbar-nav .nav-link.show {
-    padding: 10px 0;
-    color: #212529;
-  }
   .about-section .col-lg-5 {
     padding: 20px;
   }
@@ -783,7 +752,24 @@ footer .link-animated a:hover {
   .about-section .about-content {
     padding: 10px;
   }
+  .features .feature-item {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+  .features .center-image {
+    height: 330px; /* Set the same height as width */
+  }
+  .testimonial-carousel .testimonial-item {
+    max-width: 350px;
+    position: absolute; /* Position the item absolutely within its parent */
+    left: 0%; /* Adjust the right positioning */
+    margin: 0 auto;
+  }
+  .responsive-content {
+    justify-content: flex-start !important;
+  }
 }
+/* Desktop Only */
 @media (min-width: 992px) {
   /* Sticky Top Navbar 
   .sticky-top.navbar {
@@ -805,8 +791,6 @@ footer .link-animated a:hover {
   .gallery .box {
     margin: -15px;
   }
-}
-@media (min-width: 1200px) {
   /* Footer */
   .footer {
     padding: 30px 0;
